# eRPC_TCP_Demo_Win_MinGW

./: IDL.erpc
client/: CMakeLists.txt
client/app/: erpc_matrix_multiply_client.cpp  main.cpp
client/infra/: erpc_client_manager.cpp
client/port/: erpc_threading.h
client/setup/: erpc_client_setup.cpp
client/transports/: erpc_tcp_transport.cpp
server/: CMakeLists.txt
server/app/: erpc_matrix_multiply.h  erpc_matrix_multiply_server.cpp  erpc_matrix_multiply_server.h  main.cpp
server/port/: erpc_threading_win32.cpp
server/transports/: erpc_tcp_transport.cpp  erpc_tcp_transport.h
